--- a/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_listagem.html
@@ -1,58 +1,67 @@
 {% extends 'projeto/base/base.html' %}
-
+{% load static %}
 {% block title %}Listagem de Bimestres | GEscolar{% endblock  %}
 
 
 {% block main %}
 
-    <h2>Listagem de Bimestres</h2> 
+    <h2><b>Listagem de Bimestres</b></h2> 
+    <br>
 
-    <table>
-        <thead>
-            <tr>    
-                <th>Alt</th>
-                <th>Exc</Th>
-                <th>Bimestre</th>
-                <th>Situação</th>
-                <th>Data Inicial</th>
-                <th>Data Final</th>
-            </tr>
-            {% if numero_bimestre < 5 and ano.Situacao == 'A'%}
-                <a href="{% url 'bimestre_novo' idA %}">Novo</a>
-            {% endif  %}
-        </thead>
-        <tbody>
-            {% for bimestre in bimestres %}
-                <tr>
-                    {% if bimestre.Situacao == 'A' %}
-                        <td><a href="{% url 'bimestre_alterar' idA bimestre.id %}">X</a></td>
-                        <td><a href="{% url 'bimestre_deletar' idA bimestre.id %}">X</a></td>
-                    {% else  %}
-                        <td>X</td>
-                        <td>X</td>
-                    {% endif  %}
-                    <td><a href="{% url 'bimestre_consultar' idA bimestre.id %}">{{ bimestre.Bimestre }} - {{ bimestre.AnoLetivo }}</a></td>
-                    {% if bimestre.Situacao == 'A' %}
-                        <td>Aberto</td>
-                    {% else  %}
-                        <td>Fechado</td>
-                    {% endif  %}
-
-                    {% if bimestre.Data_Inicio  %}
-                        <td>{{ bimestre.Data_Inicio }}</td>
-                    {% else  %}
-                        <td></td>
-                    {% endif  %}
-
-                    {% if bimestre.Data_Fim  %}
-                        <td>{{ bimestre.Data_Fim }}</td>
-                    {% else  %}
-                        <td></td>
-                    {% endif  %}
+    <div class="table-responsive-lg">   
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>    
+                    <th class="text-center">
+                        {% if numero_bimestre < 5 and ano.Situacao == 'A'%}
+                            <a href="{% url 'bimestre_novo' idA %}"><img src="{% static 'img/new.png' %}" alt="Ícone de cadastro"></a>
+                        {% endif  %}
+                    </th>
+                    <th></th>
+                    <th>Bimestre</th>
+                    <th>Situação</th>
+                    <th>Data Inicial</th>
+                    <th>Data Final</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <a href="{% url 'ano_listagem' %}"> Voltar</a>
+
+            </thead>
+            <tbody>
+                {% for bimestre in bimestres %}
+                    <tr>
+                        {% if bimestre.Situacao == 'A' %}
+                            <td class="text-center"><a href="{% url 'bimestre_alterar' idA bimestre.id %}"><img src="{% static 'img/update.png' %}" alt="Ícone de alteração"></a></td>
+                            <td class="text-center"><a href="{% url 'bimestre_deletar' idA bimestre.id %}"><img src="{% static 'img/delete.png' %}" alt="Ícone de exclusão"></a></td>
+                        {% else  %}
+                            <td class="text-center" ><img src="{% static 'img/update_disabled.png' %}" alt="Ícone de alteração desabilitado"></td>
+                            <td class="text-center" ><img src="{% static 'img/delete_disabled.png' %}" alt="Ícone de exclusão desabilitado"></td>
+                        {% endif  %}
+                        <td><a href="{% url 'bimestre_consultar' idA bimestre.id %}" class="text-secondary">{{ bimestre.Bimestre }} - {{ bimestre.AnoLetivo }}</a></td>
+                        {% if bimestre.Situacao == 'A' %}
+                            <td>Aberto</td>
+                        {% else  %}
+                            <td>Fechado</td>
+                        {% endif  %}
+
+                        {% if bimestre.Data_Inicio  %}
+                            <td>{{ bimestre.Data_Inicio }}</td>
+                        {% else  %}
+                            <td></td>
+                        {% endif  %}
+
+                        {% if bimestre.Data_Fim  %}
+                            <td>{{ bimestre.Data_Fim }}</td>
+                        {% else  %}
+                            <td></td>
+                        {% endif  %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <div class="text-right">
+       <a href="{% url 'ano_listagem' %}" class="btn btn-secondary"> Voltar</a> 
+    </div>
+    <br>
 
 {% endblock  %}
