--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -9,13 +9,11 @@
     <h2><b>Listagem de Secretários</b></h2> 
     <br>
     
-
     <form class="form">
         <fieldset class="container-fluid">
             <div class="row">
                 <div class="mr-5 form-group">
                     <label for="id_ativo">Status:</label>
-                    &nbsp;
                     <select name="ativo" id="id_ativo" class="form-control">
                         {% for item in Filtro_Status %}
                             {% if status == item.0 %}
@@ -38,7 +36,7 @@
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
-                    <th><a href="{% url 'secretario_novo' %}"><img src="{% static 'img/new.png' %}" alt="Ícone de cadastro"></a></th>
+                    <th class="text-center"><a href="{% url 'secretario_novo' %}"><img src="{% static 'img/new.png' %}" alt="Ícone de cadastro"></a></th>
                     <th></th>
                     <th>Nome</th>
                     <th>Sexo</th>
@@ -52,8 +50,8 @@
             <tbody>
                 {% for secretario in secretarios %}
                     <tr>
-                        <td><a href="{% url 'secretario_alterar' secretario.id %}"><img src="{% static 'img/update.png' %}" alt="Ícone de alteração"></a></td>
-                        <td><a href="{% url 'secretario_deletar' secretario.id %}"><img src="{% static 'img/delete.png' %}" alt="Ícone de exclusão"></a></td>
+                        <td class="text-center"><a href="{% url 'secretario_alterar' secretario.id %}"><img src="{% static 'img/update.png' %}" alt="Ícone de alteração"></a></td>
+                        <td class="text-center"><a href="{% url 'secretario_deletar' secretario.id %}"><img src="{% static 'img/delete.png' %}" alt="Ícone de exclusão"></a></td>
                         <td><a href="{% url 'secretario_consultar' secretario.id %}" class="text-secondary">{{ secretario.Nome }}</a></td>
                         <td>{{ secretario.Sexo }}</td>
                         <td>{{ secretario.Cpf }}</td>
