--- a/gestaoEscolar/templates/gestaoEscolar/aluno/aluno_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/aluno/aluno_listagem.html
@@ -1,100 +1,102 @@
 {% extends 'projeto/base/base.html' %}
-
+{% load static %}
 {% block title %}Listagem de Alunos | GEscolar{% endblock  %}
 
 
 {% block main %}
 
-    <h2>Listagem de Alunos</h2> 
+    <h2><b>Listagem de Alunos</b></h2> 
+    <br>
 
 
+    <form class="form">
+        <fieldset class="container-fluid">
+            <div class="row">
+                <div class="mr-5 form-group">
+                    <label for="id_matricula">Status da matrícula:</label>
+                    <select name="matricula" id="id_matricula" class="form-control">
+                        {% for item in Filtro_Matricula %}
+                            {% if matricula == item.0 %}
+                                <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                            {% else %}
+                                <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                            {% endif %}
+                        {% endfor %}    
+                    </select>
+                </div>
 
-    <form>
-        <fieldset>
-            <div>
-                <label for="id_matricula">Status da matrícula:</label>
-                <select name="matricula" id="id_matricula">
-                    {% for item in Filtro_Matricula %}
-                        {% if matricula == item.0 %}
-                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
-                        {% else %}
-                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
-                        {% endif %}
-                    {% endfor %}    
-                </select>
+                <div class="mr-5 form-group">
+                    <label for="id_ativo">Status da conta:</label>
+                    <select name="ativo" id="id_ativo" class="form-control">
+                        {% for item in Filtro_Status %}
+                            {% if status == item.0 %}
+                                <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                            {% else %}
+                                <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                            {% endif %}
+                        {% endfor %}    
+                    </select>
+                </div>
+
+                <div class="form-group mt-auto">
+                    <button type="submit" class="btn btn-info">Pesquisar</button>
+                </div>
             </div>
-
-            <div>
-                <label for="id_ativo">Status da conta:</label>
-                <select name="ativo" id="id_ativo">
-                    {% for item in Filtro_Status %}
-                        {% if status == item.0 %}
-                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
-                        {% else %}
-                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
-                        {% endif %}
-                    {% endfor %}    
-                </select>
-            </div>
-
-            <button type="submit">Pesquisar</button>
         </fieldset>
         
     </form>
     
-    <table>
-        <thead>
-            <tr>
-                <th>Alt</th>
-                <th>Exc</Th>
-                <th>Nome</th>
-                <th>Sexo</th>
-                <th>CPF</th>
-                <th>RG</th>
-                <th>RA</th>
-                <th>RM</th>
-                <th>Status da Matrícula</th>
-                <th>Status da Conta</th>
-                <th>Email</th>
-            </tr>
-            <a href="{% url 'aluno_novo' %}">Novo</a>
-        </thead>
-        <tbody>
-            {% for aluno in alunos %}
-                
+    <div class="table-responsive-lg">
+        <table class="table table-bordered table-hover">
+            <thead>
                 <tr>
-                    <td><a href="{% url 'aluno_alterar' aluno.id %}">X</a></td>
-                    <td><a href="{% url 'aluno_deletar' aluno.id %}">X</a></td>
-                    <td><a href="{% url 'aluno_consultar' aluno.id %}">{{ aluno.Nome }}</a></td>
-                    <td>{{ aluno.Sexo }}</td>
-                    <td>{{ aluno.Cpf }}</td>
-                    <td>{{ aluno.Rg }}</td>
-                    <td>{{ aluno.Ra }}</td>
-                    {% for matricula in matriculas %}
-                        {% if matricula.Aluno.id == aluno.id %}
-                            <td>{{ matricula.Rm }}</td>
-                            {% if matricula.Situacao == 'matriculado' %}
-                                <td>Matriculado</td>
-                            {% elif matricula.Situacao == 'concluido' %}
-                                <td>Concluído</td>
-                            {% elif matricula.Situacao == 'transferido' %}
-                                <td>Transferido</td>
-                            {% elif matricula.Situacao == 'trancado' %}
-                                <td>Trancado</td>
-                            {% endif %} 
-                        {% endif %}
-                    {% endfor %}    
-                    {% if aluno.Usuario.is_active %}
-                        <td>Ativo</td>
-                    {% else %}
-                        <td>Inativo</td>
-                    {% endif %}
-                    <td>{{ aluno.Usuario.email }}</td>
-                    
+                    <th class="text-center"><a href="{% url 'aluno_novo' %}"><img src="{% static 'img/new.png' %}" alt="Ícone de cadastro"></a></th>
+                    <th></Th>
+                    <th>Nome</th>
+                    <th>Sexo</th>
+                    <th>CPF</th>
+                    <th>RA</th>
+                    <th>RM</th>
+                    <th>Status da Matrícula</th>
+                    <th>Status da Conta</th>
+                    <th>Email</th>
                 </tr>
-                
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for aluno in alunos %}
+                    <tr>
+                        <td class="text-center"><a href="{% url 'aluno_alterar' aluno.id %}"><img src="{% static 'img/update.png' %}" alt="Ícone de alteração"></a></td>
+                        <td class="text-center"><a href="{% url 'aluno_deletar' aluno.id %}"><img src="{% static 'img/delete.png' %}" alt="Ícone de exclusão"></a></td>
+                        <td><a href="{% url 'aluno_consultar' aluno.id %}" class="text-secondary">{{ aluno.Nome }}</a></td>
+                        <td>{{ aluno.Sexo }}</td>
+                        <td>{{ aluno.Cpf }}</td>
+                        <td>{{ aluno.Ra }}</td>
+                        {% for matricula in matriculas %}
+                            {% if matricula.Aluno.id == aluno.id %}
+                                <td>{{ matricula.Rm }}</td>
+                                {% if matricula.Situacao == 'matriculado' %}
+                                    <td>Matriculado</td>
+                                {% elif matricula.Situacao == 'concluido' %}
+                                    <td>Concluído</td>
+                                {% elif matricula.Situacao == 'transferido' %}
+                                    <td>Transferido</td>
+                                {% elif matricula.Situacao == 'trancado' %}
+                                    <td>Trancado</td>
+                                {% endif %} 
+                            {% endif %}
+                        {% endfor %}    
+                        {% if aluno.Usuario.is_active %}
+                            <td>Ativo</td>
+                        {% else %}
+                            <td>Inativo</td>
+                        {% endif %}
+                        <td>{{ aluno.Usuario.email }}</td>
+                        
+                    </tr>
+                    
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock  %}
