--- a/gestaoEscolar/templates/gestaoEscolar/professor/professor_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/professor/professor_listagem.html
@@ -1,88 +1,95 @@
 {% extends 'projeto/base/base.html' %}
-
+{% load static %}
 {% block title %}Listagem de Professores | GEscolar{% endblock  %}
 
 
 {% block main %}
 
-    <h2>Listagem de Professores</h2> 
+    <h2><b>Listagem de Professores</b></h2> 
+    <br>
 
-    <form>
-        <fieldset>
-            <div>
-                <label for="id_titulo">Título:</label>
-                <select name="titulo" id="id_titulo">
-                    {% for item in Filtro_Titulos %}
-                        {% if titulo == item.0 %}
-                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
-                        {% else %}
-                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
-                        {% endif %}
-                    {% endfor %}    
-                </select>
+    <form class="form">
+        <fieldset class="container-fluid">
+            <div class="row">
+                <div class="mr-5 form-group">
+                    <label for="id_titulo">Título:</label>
+                    <select name="titulo" id="id_titulo" class="form-control">
+                        {% for item in Filtro_Titulos %}
+                            {% if titulo == item.0 %}
+                                <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                            {% else %}
+                                <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                            {% endif %}
+                        {% endfor %}    
+                    </select>
+                </div>
+    
+                <div class="mr-5 form-group">
+                    <label for="id_ativo">Status:</label>
+                    <select name="ativo" id="id_ativo" class="form-control">
+                        {% for item in Filtro_Status %}
+                            {% if status == item.0 %}
+                                <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                            {% else %}
+                                <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                            {% endif %}
+                        {% endfor %}    
+                    </select>
+                </div>
+    
+                <div class="form-group mt-auto">
+                    <button type="submit" class="btn btn-info">Pesquisar</button>
+                </div>
             </div>
-
-            <div>
-                <label for="id_ativo">Status:</label>
-                <select name="ativo" id="id_ativo">
-                    {% for item in Filtro_Status %}
-                        {% if status == item.0 %}
-                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
-                        {% else %}
-                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
-                        {% endif %}
-                    {% endfor %}    
-                </select>
-            </div>
-
-            <button type="submit">Pesquisar</button>
         </fieldset>
         
     </form>
-    
-    <table>
-        <thead>
-            <tr>
-                <th>Alt</th>
-                <th>Exc</Th>
-                <th>Nome</th>
-                <th>Sexo</th>
-                <th>CPF</th>
-                <th>RG</th>
-                <th>Email</th>
-                <th>Título</th>
-                <th>Status</th>
-            </tr>
-            <a href="{% url 'professor_novo' %}">Novo</a>
-        </thead>
-        <tbody>
-            {% for professor in professores %}
+ 
+    <div class="table-responsive-lg">    
+        <table class="table table-bordered table-hover">
+            <thead>
                 <tr>
-                    <td><a href="{% url 'professor_alterar' professor.id %}">X</a></td>
-                    <td><a href="{% url 'professor_deletar' professor.id %}">X</a></td>
-                    <td><a href="{% url 'professor_consultar' professor.id %}">{{ professor.Nome }}</a></td>
-                    <td>{{ professor.Sexo }}</td>
-                    <td>{{ professor.Cpf }}</td>
-                    <td>{{ professor.Rg }}</td>
-                    <td>{{ professor.Usuario.email }}</td>
-                    
-                    {% if professor.Titulo == 'E' %}
-                        <td>Especialista</td>
-                    {% elif professor.Titulo == 'M' %}
-                        <td>Mestre</td>
-                    {% elif professor.Titulo == 'D' %}
-                        <td>Doutor</td>
-                    {% endif %}
-
-                    {% if professor.Usuario.is_active %}
-                        <td>Ativo</td>
-                    {% else %}
-                        <td>Inativo</td>
-                    {% endif %}
-                    
+                    <th class="text-center"><a href="{% url 'professor_novo' %}"><img src="{% static 'img/new.png' %}" alt="Ícone de cadastro"></a></th>
+                    <th></Th>
+                    <th>Nome</th>
+                    <th>Sexo</th>
+                    <th>CPF</th>
+                    <th>RG</th>
+                    <th>Email</th>
+                    <th>Título</th>
+                    <th>Status</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                
+            </thead>
+            <tbody>
+                {% for professor in professores %}
+                    <tr>
+                        <td class="text-center"><a href="{% url 'professor_alterar' professor.id %}"><img src="{% static 'img/update.png' %}" alt="Ícone de alteração"></a></td>
+                        <td class="text-center"><a href="{% url 'professor_deletar' professor.id %}"><img src="{% static 'img/delete.png' %}" alt="Ícone de exclusão"></a></td>
+                        <td><a href="{% url 'professor_consultar' professor.id %}" class="text-secondary">{{ professor.Nome }}</a></td>
+                        <td>{{ professor.Sexo }}</td>
+                        <td>{{ professor.Cpf }}</td>
+                        <td>{{ professor.Rg }}</td>
+                        <td>{{ professor.Usuario.email }}</td>
+                        
+                        {% if professor.Titulo == 'E' %}
+                            <td>Especialista</td>
+                        {% elif professor.Titulo == 'M' %}
+                            <td>Mestre</td>
+                        {% elif professor.Titulo == 'D' %}
+                            <td>Doutor</td>
+                        {% endif %}
+
+                        {% if professor.Usuario.is_active %}
+                            <td>Ativo</td>
+                        {% else %}
+                            <td>Inativo</td>
+                        {% endif %}
+                        
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock  %}
